Added more features

--- a/templates/tests/test.html.twig
+++ b/templates/tests/test.html.twig
@@ -13,6 +13,10 @@
                 <li>{{ question }}</li>
             {% endfor %}
         </ul>
+
+        <br/>
+
+        <a href="/check/test">Check result of the test</a>
     </body>
 
 </html>
