--- a/public/css/login_page.css
+++ b/public/css/login_page.css
@@ -1,7 +1,12 @@
 
 body {
-
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    font-family: 'Roboto', 'sans-serif';
 }
+
 
 #loginFormContainer {
     display: flex;
@@ -10,8 +15,29 @@ body {
     box-sizing: border-box;
     padding: 10px;
     width: 380px;
-    margin: 15% auto 0 auto;
+    margin: 200px auto 0 auto;
     box-shadow: 2px 3px 2px rgba(150,150,150, 0.5), -2px 0 2px rgba(150,150,150, 0.5);
+}
+
+
+#loginFormContainer #errorMessage {
+    height: 15px;
+    font-size: 14px;
+    color: red;
+    padding: 3px;
+    text-indent: 5px;
+    margin: 0 0 3px 0;
+    font-family: 'Roboto', 'sans-serif';
+}
+
+
+#loginFormContainer h2 {
+    width: 100%;
+    text-align: center;
+    font-size: 20px;
+    color: #555;
+    padding: 0;
+    margin: 5px 5px 10px 5px;
 }
 
 
@@ -22,3 +48,70 @@ body {
 }
 
 
+#loginFormContainer .inputWrapper {
+    display: flex;
+    flex-direction: row;
+    border-radius: 5px;
+    width: 100%;
+    height: 30px;
+    border: 1px solid rgba(150, 150, 150, 0.5);
+}
+
+
+#loginFormContainer .inputWrapper:first-child {
+    margin-bottom: 8px;
+}
+
+
+#loginFormContainer .input {
+    margin-left: 5px;
+    width: 330px;
+    outline: none;
+    border: none;
+    border-radius: 5px;
+    font-size: 15px;
+    font-family: 'Roboto', 'sans-serif';
+}
+
+
+#loginFormContainer img {
+    position: relative;
+    left: 4px;
+    top: 5px;
+}
+
+
+#loginFormContainer .imageWrapper {
+    background-color: #eee;
+    width: 30px;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+}
+
+
+#loginFormContainer #submitButton {
+    flex-direction: row;
+    border-radius: 5px;
+    width: 100%;
+    margin: 0 auto;
+    height: 30px;
+    background-color: #4286f4;
+    border: none;
+    outline: none;
+    font-size: 17px;
+    color: #fff;
+    cursor: pointer;
+    display: inline-block;
+    text-align: center;
+    font-family: 'Roboto', 'sans-serif';
+}
+
+
+#loginFormContainer #submitButton:hover {
+    box-shadow: 1px 2px 1px rgba(150,150,150, 0.5);
+}
+
+
+#loginFormContainer #submitButton:active {
+    box-shadow: none;
+}
