--- a/templates/tests/test.html.twig
+++ b/templates/tests/test.html.twig
@@ -4,6 +4,7 @@
 
     <head>
         <title>Test</title>
+
     </head>
 
     <body>
@@ -16,7 +17,13 @@
 
         <br/>
 
-        <a href="/check/test">Check result of the test</a>
+        {#<a href="/check/test"> Check result of the test </a>#}
+        <form action="/check/test" method="post">
+            <input type="submit" value="submit"/>
+        </form>
+
+        {#<button onclick="sendData()">Click</button>#}
+
     </body>
 
 </html>
