--- a/public/css/system.css
+++ b/public/css/system.css
@@ -1,5 +1,27 @@
 body {
     font-family: 'Roboto', 'sans-serif';
+    min-width: 400px;
+}
+
+
+#header {
+    position: fixed;
+    left: 0;
+    top: 0;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 10px;
+    width: 100%;
+    height: 80px;
+    background-color: #aaa; /* #4288f7; */
+    box-shadow: 0 3px 2px rgba(150, 150, 150, 0.5);
+}
+
+
+#header h2 {
+    color: #fff;
 }
 
 
@@ -9,25 +31,135 @@ body {
     border-radius: 5px;
     background-color: #f45642;
     width: 80px;
+    height: 18px;
+    position: relative;
+    top: 17px;
     display: inline-block;
     text-align: center;
     color: #fff;
     padding: 5px;
     font-size: 14px;
+    font-weight: bold;
     cursor: pointer;
-    position: fixed;
-    top: 30px;
-    right: 30px;
     font-family: 'Roboto', 'sans-serif';
     text-decoration: none;
-}
-
-
-#logoutButton:hover {
     box-shadow: 1px 2px 1px rgba(150,150,150, 0.5);
 }
 
 
-#logoutButton:active {
+#saveDataButton {
+    outline: none;
+    border: none;
+    border-radius: 5px;
+    background-color: #f45642;
+    width: 100px;
+    display: inline-block;
+    text-align: center;
+    color: #fff;
+    padding: 5px;
+    font-size: 16px;
+    font-weight: bold;
+    position: fixed;
+    right: 30px;
+    bottom: 30px;
+    cursor: pointer;
+    font-family: 'Roboto', 'sans-serif';
+    text-decoration: none;
+    box-shadow: 1px 2px 1px rgba(150,150,150, 0.5);
+}
+
+
+#uploadButton {
+    outline: none;
+    border: none;
+    border-radius: 5px;
+    background-color: #f45642;
+    width: 130px;
+    display: inline-block;
+    text-align: center;
+    color: #fff;
+    padding: 5px;
+    font-size: 14px;
+    font-weight: bold;
+    cursor: pointer;
+    font-family: 'Roboto', 'sans-serif';
+    text-decoration: none;
+    box-shadow: 1px 2px 1px rgba(150,150,150, 0.5);
+}
+
+
+#uploadContainer > #uploadFileName {
+    position: relative;
+    top: 8px;
+    left: 5px;
+}
+
+
+#logoutButton:hover, #saveDataButton:hover, #uploadButton:hover {
+    box-shadow: 2px 3px 2px rgba(150,150,150, 0.5);
+}
+
+
+#logoutButton:active, #saveDataButton:active, #uploadButton:active {
     box-shadow: none;
+}
+
+
+#systemContainer {
+    width: 80%;
+    max-width: 800px;
+    margin: 100px auto 0 auto;
+}
+
+
+#systemContainer #systemData {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+
+#systemContainer #systemData > * {
+    display: inline-block;
+    margin-bottom: 15px;
+}
+
+
+#systemData .inputFields {
+    border:none;
+    outline: none;
+    height: 30px;
+    font-size: 16px;
+    border-radius: 5px;
+    box-shadow: 2px 3px 2px rgba(150, 150, 150, 0.5), -2px 0 2px rgba(150, 150, 150, 0.5);
+}
+
+
+#systemData textarea {
+    height: 200px !important;
+    resize: none;
+    box-sizing: border-box;
+    padding: 10px;
+}
+
+
+#systemData button {
+    width: 80px !important;
+}
+
+
+#systemData #associationCode {
+    background: url(/assets/icons/account.svg) no-repeat scroll 7px 7px;
+    padding-left:30px;
+}
+
+
+#systemData #associationEmail {
+    background: url(/assets/icons/email.svg) no-repeat scroll 7px 7px;
+    padding-left:30px;
+}
+
+
+#systemData #csvUploadButton {
+    display: none;
 }
