--- a/templates/test_finished/test_passed_with_code.html.twig
+++ b/templates/test_finished/test_passed_with_code.html.twig
@@ -15,6 +15,8 @@
     <h3>Enter your email: </h3>
     <input id="emailInput" type="text" />
     <button onclick="sendEmail()">Send email</button>
+    <br/>
+    <p id="returnMessage"></p>
 
 </body>
 
