--- a/public/css/system.css
+++ b/public/css/system.css
@@ -15,13 +15,13 @@ body {
     padding: 10px;
     width: 100%;
     height: 80px;
-    background-color: #aaa; /* #4288f7; */
+    background-color: #fff; /* #4288f7; */
     box-shadow: 0 3px 2px rgba(150, 150, 150, 0.5);
 }
 
 
 #header h2 {
-    color: #fff;
+    color: #333;
 }
 
 
@@ -30,20 +30,19 @@ body {
     border: none;
     border-radius: 5px;
     background-color: #f45642;
-    width: 80px;
+    width: 90px;
     height: 18px;
-    position: relative;
-    top: 17px;
     display: inline-block;
     text-align: center;
     color: #fff;
     padding: 5px;
-    font-size: 14px;
+    font-size: 16px;
     font-weight: bold;
     cursor: pointer;
     font-family: 'Roboto', 'sans-serif';
     text-decoration: none;
     box-shadow: 1px 2px 1px rgba(150,150,150, 0.5);
+    margin-bottom: 5px;
 }
 
 
@@ -51,7 +50,7 @@ body {
     outline: none;
     border: none;
     border-radius: 5px;
-    background-color: #f45642;
+    background-color: #47ce1a;
     width: 100px;
     display: inline-block;
     text-align: center;
@@ -59,9 +58,6 @@ body {
     padding: 5px;
     font-size: 16px;
     font-weight: bold;
-    position: fixed;
-    right: 30px;
-    bottom: 30px;
     cursor: pointer;
     font-family: 'Roboto', 'sans-serif';
     text-decoration: none;
@@ -102,6 +98,12 @@ body {
 
 #logoutButton:active, #saveDataButton:active, #uploadButton:active {
     box-shadow: none;
+}
+
+
+#buttons {
+    display: flex;
+    flex-direction: column;
 }
 
 
