--- a/templates/system/system.html.twig
+++ b/templates/system/system.html.twig
@@ -21,7 +21,11 @@
 
     <div id="header">
         <h2> Edit Association data </h2>
-        <a href="/logout" id="logoutButton"> Logout </a>
+        <div id="buttons">
+            <a href="/logout" id="logoutButton"> Logout </a>
+            <button id="saveDataButton" onclick="updateSystemData()">Save</button>
+        </div>
+
     </div>
 
     <div id="systemData">
@@ -37,12 +41,9 @@
             <span id="uploadFileName">No file selected</span>
         </div>
 
-
         <input id="csvUploadButton" onchange="handleFileUploaded()" type="file" accept=".csv"/>
 
     </div>
-
-    <button id="saveDataButton" onclick="updateSystemData()">Save</button>
 
 </div>
 </body>
