--- a/public/css/system.css
+++ b/public/css/system.css
@@ -165,3 +165,11 @@ body {
 #systemData #csvUploadButton {
     display: none;
 }
+
+
+.codesValues {
+    margin: 0;
+    padding: 0;
+    font-weight: bold;
+    font-size: 18px;
+}
