--- a/templates/system/system.html.twig
+++ b/templates/system/system.html.twig
@@ -4,7 +4,7 @@
 <html>
 
 <head>
-    <title>Login page</title>
+    <title> System page </title>
     {% block scripts %}
         {<script src="{{ asset('js/system.js') }}"></script>}
     {% endblock %}
@@ -33,6 +33,9 @@
         <input id="associationCode" class="inputFields" type="text" value="{{ associationId }}"/>
         <input id="associationEmail" class="inputFields" type="text" value="{{ associationEmail }}"/>
         <textarea id="emailText" class="inputFields">{{ emailText }}</textarea>
+
+        <p class="codesValues">Used Gutscheincodes: {{ used }}</p>
+        <p class="codesValues">Unused Gutscheincodes: {{ unused }}</p>
 
         <h3> Import Gutscheincodes </h3>
 
