--- a/templates/test_finished/test_failed.html.twig
+++ b/templates/test_finished/test_failed.html.twig
@@ -1,5 +1,10 @@
 {% extends 'base.html.twig' %}
 
+ {% block stylesheets %}
+     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+     <link href="{{ asset('css/test_passed.css') }}" rel="stylesheet" />
+ {% endblock %}
+
 {% block body %}
 
     <h1>You failed the test</h1>
