--- a/templates/test_finished/test_passed.html.twig
+++ b/templates/test_finished/test_passed.html.twig
@@ -4,17 +4,28 @@
 
     <head>
         <title>Test</title>
+
         {% block scripts %}
             <script src="{{ asset('js/test.js') }}"></script>
+        {% endblock %}
+
+        {% block stylesheets %}
+            <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+            <link href="{{ asset('css/test_passed.css') }}" rel="stylesheet" />
         {% endblock %}
     </head>
 
     <body>
 
         <h1> {{ message }} </h1>
-        <h3>Enter your email: </h3>
-        <input id="emailInput" type="text" />
-        <button onclick="sendEmail()">Send email</button>
+
+        <div id="emailContainer">
+            <span>Email: </span>
+            <input id="emailInput" type="text" />
+            <button onclick="sendEmail()">Send email</button>
+        </div>
+
+
         <br/>
         <p id="returnMessage"></p>
 
