--- a/templates/test_finished/test_failed.html.twig
+++ b/templates/test_finished/test_failed.html.twig
@@ -1,10 +1,12 @@
 {% extends 'base.html.twig' %}
 
+<!-- Include stylesheets -->
  {% block stylesheets %}
      <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
      <link href="{{ asset('css/test_passed.css') }}" rel="stylesheet" />
  {% endblock %}
 
+<!-- Set template body -->
 {% block body %}
 
     <h1>You failed the test</h1>
