--- a/public/css/system.css
+++ b/public/css/system.css
@@ -1,3 +1,4 @@
+
 body {
     font-family: 'Roboto', 'sans-serif';
     min-width: 400px;
@@ -15,7 +16,7 @@ body {
     padding: 10px;
     width: 100%;
     height: 80px;
-    background-color: #3e66a5; /* #4288f7; */
+    background-color: #3e66a5;
     box-shadow: 0 3px 2px rgba(150, 150, 150, 0.5);
 }
 
@@ -30,28 +31,6 @@ body {
     right: 15px;
     top: 15px;
 }
-
-
-/*#saveDataButton {*/
-    /*outline: none;*/
-    /*border: none;*/
-    /*border-radius: 5px;*/
-    /*background-color: #47ce1a;*/
-    /*width: 100px;*/
-    /*display: inline-block;*/
-    /*text-align: center;*/
-    /*color: #fff;*/
-    /*padding: 5px;*/
-    /*position: fixed;*/
-    /*bottom: 30px;*/
-    /*right: 30px;*/
-    /*font-size: 16px;*/
-    /*font-weight: bold;*/
-    /*cursor: pointer;*/
-    /*font-family: 'Roboto', 'sans-serif';*/
-    /*text-decoration: none;*/
-    /*box-shadow: 1px 2px 1px rgba(150,150,150, 0.5);*/
-/*}*/
 
 
 #uploadButton {
@@ -163,9 +142,6 @@ body {
 }
 
 
-
-/* Paper-fab-component */
-
 #saveDataButton {
     width: 50px;
     height: 50px;
@@ -203,15 +179,17 @@ body {
 }
 
 
+/* Media queries */
 @media only screen and (max-width: 820px) {
+
     #gutscheincodesArea > #leftArea {
         display: block;
         width: 100%;
     }
 
-
     #gutscheincodesArea > #rightArea {
         display: block;
         width: 100%;
     }
+
 }
