More fixes and adjustments

--- a/templates/system/system.html.twig
+++ b/templates/system/system.html.twig
@@ -92,7 +92,8 @@
                     </div>
 
                     <div id="leftArea">
-                        <p class="codesValues"> Un/used Gutscheincodes: {{ unused }} / {{ used }} </p>
+                        <p class="codesValues"> Used Gutscheincodes: {{ used }} </p>
+                        <p class="codesValues"> Unused Gutscheincodes: {{ unused }} </p>
                     </div>
 
                 </div>
