--- a/public/css/system.css
+++ b/public/css/system.css
@@ -166,8 +166,6 @@ body {
 #gutscheincodesArea > #leftArea {
     display: inline-block;
     width: 49%;
-    position: relative;
-    bottom: 15px;
 }
 
 
@@ -185,6 +183,7 @@ body {
     #gutscheincodesArea > #leftArea {
         display: block;
         width: 100%;
+        margin-top: 10px;
     }
 
     #gutscheincodesArea > #rightArea {
